# portfolio

./: .gitignore  CHANGELOG_COLUMNS.md  LICENSE  README.md
.github/workflows/: build-macos.yml  build-release.yml  cleanup-cache.yml
catalog_update/: check_explorers.py  check_new_coins.py  cmc_geckoid.json
frontend/: coinman-tpl.js  index.css  index.html  index.js  index_dw.css
frontend/coinbase/: cmc.json
scripts/: build-linux-local.sh  build-windows-local.sh
scripts/catalog/: check_new_coins.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  settings.rs  storage.rs
