[package]
name = "coinman-portfolio"
version = "0.6.0"
description = "CoinMan desktop portfolio tracker"
authors = ["modulator"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "coinman_portfolio_lib"
crate-type = ["rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
incremental = false

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = ["devtools"] }
tauri-plugin-log = "2"
tauri-plugin-single-instance = "2.4.0"
tauri-plugin-dialog = "2.2.0"
aes-gcm = "0.10"
argon2 = "0.5"
rand = "0.8"
base64 = "0.22"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["rt"] }
